current state of i18n as exported by Transifex

--- a/trunk/JLanguageTool/src/java/de/danielnaber/languagetool/MessagesBundle_ast.properties
+++ b/trunk/JLanguageTool/src/java/de/danielnaber/languagetool/MessagesBundle_ast.properties
@@ -67,7 +67,7 @@ es = Castellanu
 
 false_friend = Amigu falsu
 
-false_friend_desc = Pista p'amigu falsu\:
+false_friend_desc = pista p'amigu falsu\:
 
 false_friend_hint = Pista\: "{0}" ({1}) significa {2} ({3}).
 
@@ -114,7 +114,7 @@ guiMotherTongue = La to llingua materna\:
 
 guiNoErrorsFound = Nun s'atoparon errores nin avisos (llingua\: {0})
 
-guiNoErrorsFoundSelectedText = Nun s'atoparon errores nin avisos nel testu seleicion\u00e1u (language\: {0})
+guiNoErrorsFoundSelectedText = Nun s'atoparon errores nin avisos nel testu seleicion\u00e1u (llingua\: {0})
 
 guiOKButton = &Aceutar
 
