--- a/trunk/JLanguageTool/src/java/de/danielnaber/languagetool/MessagesBundle_gl.properties
+++ b/trunk/JLanguageTool/src/java/de/danielnaber/languagetool/MessagesBundle_gl.properties
@@ -197,7 +197,7 @@ uk = ucra\u00edno
 
 unpaired_brackets = Par\u00e9nteses ou s\u00edmbolos similares desemparellados
 
-whitespace_repetition = Pos\u00edbel erro tipogr\u00e1fico\: repet\u00edu un espazo en branco
+whitespace_repetition = Pos\u00edbel erro tipogr\u00e1fico\: repetiu un espazo en branco
 
 ro = roman\u00e9s
 
