adding back translation - somehow it was lost when getting translations from crowdin

--- a/trunk/JLanguageTool/src/java/de/danielnaber/languagetool/MessagesBundle_ca.properties
+++ b/trunk/JLanguageTool/src/java/de/danielnaber/languagetool/MessagesBundle_ca.properties
@@ -1,205 +1,207 @@
 # English translation of LanguageTool
 # Copyright (C) 2006 Daniel Naber (http://www.danielnaber.de), Marcin Milkowski
 
-atd = Automatically detect language
+atd = 
 
-ast = Asturian
+ast = 
 
-be = Belarusian
+be = Bielor\u00fas
 
-br = Breton
+br = 
 
-ca = Catalan
+ca = Catal\u00e0
 
-category_case = Capitalization
+category_case = Maj\u00fascules
 
-category_false_friend = False friends
+category_false_friend = Falsos amics
 
-category_grammar = Grammar
+category_grammar = Gram\u00e0tica
 
-category_misc = Miscellaneous
+category_misc = Miscel\u00b7l\u00e0nia
 
-category_typo = Possible Typo
+category_typo = Possible error tipogr\u00e0fic
 
-checkDone = Check done, {0} potential problems found
+checkDone = S'ha realizat la comprovaci\u00f3, i s'han trobat {0} problemes potencials
 
-checkText = &Check Text
+checkText = &Comprova el text
 
-correctionMessage = Correction\:
+correctionMessage = Correcci\u00f3\:
 
-cs = Czech
+cs = Txec
 
-da = Danish
+da = Dan\u00e9s
 
-de = German
+de = Alemany
 
-desc_comma_whitespace = Use of whitespace before comma and before/after parentheses
+desc_comma_whitespace = Espais abants de la coma i abans i despr\u00e9s dels par\u00e8ntesi
 
-desc_double_punct = Use of two consecutive dots or commas
+desc_double_punct = Dos punts o comes consecutives
 
-desc_repetition = Word repetition (e.g. 'will will')
+desc_repetition = Repetici\u00f3 de paraules (p.ex. 'ma ma')
 
-desc_repetition_short = Word repetition
+desc_repetition_short = Repetici\u00f3 de paraules
 
-desc_unpaired_brackets = Unpaired braces, brackets, quotation marks and similar symbols
+desc_unpaired_brackets = Claus, cometes, par\u00e8ntesi i simbols semblants desemparellats
 
-desc_uppercase_sentence = Checks that a sentence starts with an uppercase letter
+desc_uppercase_sentence = Comprova que una frase comence per maj\u00fascula
 
-desc_whitespacerepetition = Whitespace repetition (bad formatting)
+desc_whitespacerepetition = Repetici\u00f3 d'espais en blanc (formataci\u00f3 incorrecta)
 
-double_dots_short = Two consecutive dots
+double_dots_short = Dos punts consecutius
 
-double_commas_short = Two consecutive comma
+double_commas_short = Dues comes consecutives
 
-en = English
+en = Angl\u00e8s
 
-enterText = Please type or paste text to check in the top area
+enterText = Escriviu o enganxeu el text per comprovar a l'\u00e0rea superior
 
-enterText2 = Please insert text to check here
+enterText2 = Inseriu el text per comprovar ac\u00ed
 
 eo = Esperanto
 
-errorContext = Context\:
+errorContext = 
 
-errorMessage = Message\:
+errorMessage = Missatge\:
 
-es = Spanish
+es = Castell\u00e0
 
-false_friend = False friend
+false_friend = Fals amic
 
-false_friend_desc = false friend hint for\:
+false_friend_desc = Pista del fals amic per a\:
 
-false_friend_hint = Hint\: "{0}" ({1}) means {2} ({3}).
+false_friend_hint = Pista\: "{0}" ({1}) significa {2} ({3}).
 
-false_friend_suggestion = Did you mean {0}?
+false_friend_suggestion = Volies dir {0}?
 
-fr = French
+fr = Franc\u00e8s
 
-gl = Galician
+gl = Gallec
 
-guiAddButton=Add...
-guiCancelButton = Cancel
+guiAddButton=
+guiCancelButton = Cancel\u00b7la
 
-guiCheckComplete = LanguageTool check is complete.
-guiCloseButton=Close
+guiCheckComplete = La comprovaci\u00f3 de LanguageTool s'ha completat.
+guiCloseButton=
 
-guiConfigWindowTitle = LanguageTool Options
+guiConfigWindowTitle = Opcions del LanguageTool
 
-guiDemoText = This is a example input to to show you how LanguageTool works. Note, however, that it does not include a spell checka.
+guiDemoText = Aquest \u00e9s un exemple d'entrada per a mostrar-vos com funciona LanguageTool. Tingueu en compte, no obstant, que no inclou cap corrector ortogr\u00e0fic.
 guiLanguageManagerDialog=Language Module Manager
 
-guiMatchCount = Potential errors\:
+guiMatchCount = Errors potencials\:
 
-guiMenuAbout = &About...
+guiMenuAbout = &Quant a...
 
-guiMenuAddRules = Load &Rule File
+guiMenuAddRules = Carrega un fitxer de &regles
 
-guiMenuCheckClipboard = &Check Text in Clipboard
+guiMenuCheckClipboard = &Comprova el text del porta-retalls
 
-guiMenuFile = &File
+guiMenuFile = &Fitxer
 
-guiMenuHelp = &Help
+guiMenuHelp = &Ajuda
 
-guiMenuHide = &Hide to System Tray
+guiMenuHide = &Amaga a la barra de sistema
 
-guiMenuOpen = &Open...
+guiMenuOpen = &Obre...
 
-guiMenuOptions = Option&s...
+guiMenuOptions = O&pcions...
 
-guiMenuQuit = &Quit
+guiMenuQuit = &Surt
 
-guiMenuShowMainWindow = Open Main Window
+guiMenuShowMainWindow = Obre la finestra principal
 
-guiMotherTongue = Your mother tongue\:
+guiMotherTongue = La vostra llengua materna\:
 
-guiNoErrorsFound = No errors or warnings found (language\: {0})
+guiNoErrorsFound = No s'han trobat errors ni avisos (llengua\: {0})
 
-guiNoErrorsFoundSelectedText = No errors or warnings found in selected text (language\: {0})
+guiNoErrorsFoundSelectedText = No s'han trobat errors ni avisos al text seleccionat (llengua\: {0})
 
-guiOKButton = &OK
+guiOKButton = &D'acord
 
-guiOOoChangeButton = &Change
+guiOOoChangeButton = &Canvia
 
-guiOOoCloseButton = Close
+guiOOoCloseButton = Tanca
 
-guiOOoIgnoreAllButton = Ignore All
+guiOOoIgnoreAllButton = Ignora-ho tot
 
-guiOOoIgnoreButton = Ignore
+guiOOoIgnoreButton = Ignora
 
-guiOOoOptionsButton = Options...
+guiOOoOptionsButton = Opcions...
 
-guiProgressWindowTitle = LanguageTool\: Checking Text...
+guiProgressWindowTitle = LanguageTool\: Comprovant el text...
 
-guiRemoveButton=Remove
-guiReplaceWindowTitle = Replace text
+guiRemoveButton=
+guiReplaceWindowTitle = Substitueix el text
 
-guiReplaceWithOtherText = <other text>
+guiReplaceWithOtherText = <un altre text>
 
-guiRunOnPort = Run as server on po&rt
+guiRunOnPort = Executa com a servidor en el po&rt
 
-guiSelectionCheckComplete = LanguageTool check of selected text is complete.
+guiSelectionCheckComplete = La comprovaci\u00f3 del text seleccionat s'ha completat.
 
-guiTagText = &Tag Text
+guiTagText = 
 
-incorrect_case = This sentence does not start with an uppercase letter
+incorrect_case = Aquesta frase no comen\u00e7a amb maj\u00fascula
 
-is = Icelandic
+is = Island\u00e8s
 
-it = Italian
+it = Itali\u00e0
 
-km = Khmer
+km = 
 
-lt = Lithuanian
+lt = Litu\u00e0
 
-missing_space_after_comma = Put a space after the comma
+missing_space_after_comma = Escriu un espai despr\u00e9s de la coma
 
-ml = Malayalam
+ml = Malai\u00e0lam
 
-nl = Dutch
+nl = Neerland\u00e8s
 
-no_space_after = Don't put a space after the opening parenthesis
+no_space_after = No poses cap espai despr\u00e9s dels par\u00e8ntesi d'obertura
 
-no_space_before = Don't put a space before the closing parenthesis
+no_space_before = No poses cap espai despr\u00e9s dels par\u00e8ntesi de tancament
 
-no_space_before_dot = Don't put a space before the full stop
+no_space_before_dot = No poses cap espai abans del punt.
 
-pl = Polish
+pl = Polon\u00e8s
 
-repetition = Possible typo\: you repeated a word
+repetition = Possible error tipogr\u00e0fic\: heu repetit una paraula
 
-result1 = <br><b> {0}. Line {1}, column {2}</b><br>
+result1 = <br>\
+<b> {0}. L\u00ednia {1}, columna {2}</b><br>
 
-resultAreaText = Results will appear here
+resultAreaText = Els resultats apareixeran ac\u00ed
 
-resultTime = <br>Time\: {0}ms (including {1}ms for rule matching)<br>
+resultTime = <br>\r\
+Temps\: {0}ms (incloent {1}ms per a la concordan\u00e7a de regles)<br>
 
-ru = Russian
+ru = Rus
 
-sk = Slovak
+sk = Eslovac
 
-sl = Slovenian
+sl = Eslov\u00e8
 
-space_after_comma = Put a space after the comma, but not before the comma
+space_after_comma = Posa un espai despr\u00e9s de la coma, per\u00f2 no abans de la coma
 
-startChecking = Starting check in {0}
+startChecking = La comprovaci\u00f3 comen\u00e7ar\u00e0 en {0}
 
-sv = Swedish
+sv = Suec
 
-tl = Tagalog
+tl = 
 
-textLanguage = Text Language\:
+textLanguage = Llengua del text\:
 
-two_commas = Two consecutive commas
+two_commas = Dues comes consecutives
 
-two_dots = Two consecutive dots
+two_dots = Dos punts consecutius
 
-uk = Ukrainian
+uk = Ucrain\u00e8s
 
-unpaired_brackets = Unpaired bracket or similar symbol
+unpaired_brackets = Par\u00e8ntesi o s\u00edmbol semblan sense parella
 
-whitespace_repetition = Possible typo\: you repeated a whitespace
+whitespace_repetition = Possible error tipogr\u00e0fic\: heu repetit un espai en blanc
 
-ro = Romanian
+ro = Roman\u00e8s
 
-zh = Chinese
+zh = 
 
