current state of i18n as exported by Transifex

--- a/trunk/JLanguageTool/src/java/de/danielnaber/languagetool/MessagesBundle_br.properties
+++ b/trunk/JLanguageTool/src/java/de/danielnaber/languagetool/MessagesBundle_br.properties
@@ -7,13 +7,13 @@ ast = Astureg
 
 be = Belaruseg
 
-br = Breton
+br = Brezhoneg
 
 ca = Katalaneg
 
-category_case = Majuscules
+category_case = Pennlizherenno\u00f9
 
-category_false_friend = Faux amis
+category_false_friend = Mignoned fall
 
 category_grammar = Yezhadur
 
@@ -65,7 +65,7 @@ errorMessage = Message \:
 
 es = Spagnoleg
 
-false_friend = Faux ami
+false_friend = Mignon fall
 
 false_friend_desc = note concernant les faux-amis \:
 
@@ -77,11 +77,11 @@ fr = Galleg
 
 gl = Galizeg
 
-guiAddButton=Add...
-guiCancelButton = Annuler
+guiAddButton=Ouzhpenna\u00f1...
+guiCancelButton = Nulla\u00f1
 
 guiCheckComplete = La v\u00e9rification de LanguageTool est termin\u00e9e.
-guiCloseButton=Close
+guiCloseButton=Serri\u00f1
 
 guiConfigWindowTitle = Options de LanguageTool
 
@@ -102,15 +102,15 @@ guiMenuHelp = &Skoazell
 
 guiMenuHide = R\u00e9duire dans la barre des t\u00e2ches
 
-guiMenuOpen = Ouvrir...
+guiMenuOpen = &Digeri\u00f1...
 
-guiMenuOptions = Options...
+guiMenuOptions = Di&barzhio\u00f9...
 
-guiMenuQuit = &Quitter
+guiMenuQuit = &Kuitaat
 
 guiMenuShowMainWindow = Ouvrir la fen\u00eatre principale
 
-guiMotherTongue = Langue maternelle \:
+guiMotherTongue = Hor yezh vamm \:
 
 guiNoErrorsFound = Ni alerte ni erreur n'ont \u00e9t\u00e9 trouv\u00e9es (language\: {0})
 
@@ -118,9 +118,9 @@ guiNoErrorsFoundSelectedText = Ni alerte ni erreur n'ont \u00e9t\u00e9 trouv\u00
 
 guiOKButton = &Mat eo
 
-guiOOoChangeButton = Changer
+guiOOoChangeButton = Ke&mma\u00f1
 
-guiOOoCloseButton = Fermer
+guiOOoCloseButton = Serri\u00f1
 
 guiOOoIgnoreAllButton = Ignorer tout
 
@@ -131,11 +131,11 @@ guiOOoOptionsButton = Options...
 guiProgressWindowTitle = LanguageTool \: V\u00e9rification en cours...
 
 guiRemoveButton=Remove
-guiReplaceWindowTitle = Remplacer le texte
+guiReplaceWindowTitle = Amsavi\u00f1 an destenn
 
-guiReplaceWithOtherText = <other text>
+guiReplaceWithOtherText = <testenn all>
 
-guiRunOnPort = Ex\u00e9cuter en tant que serveur sur le port
+guiRunOnPort = Erounit evel un dafariad dre ar porzh
 
 guiSelectionCheckComplete = La v\u00e9rification de LanguageTool pour le texte s\u00e9lectionn\u00e9 est termin\u00e9e.
 
@@ -187,7 +187,7 @@ sv = Svedeg
 
 tl = Tagalog
 
-textLanguage = Yezh an testenn\:
+textLanguage = Yezh an destenn\:
 
 two_commas = Deux virgules cons\u00e9cutives
 
