--- a/trunk/JLanguageTool/src/java/de/danielnaber/languagetool/MessagesBundle_cs.properties
+++ b/trunk/JLanguageTool/src/java/de/danielnaber/languagetool/MessagesBundle_cs.properties
@@ -1,13 +1,13 @@
 # English translation of LanguageTool
 # Copyright (C) 2006 Daniel Naber (http://www.danielnaber.de), Marcin Milkowski
 
-atd = Automatically detect language
+atd = 
 
-ast = Asturian
+ast = 
 
 be = B\u011blorusky
 
-br = Breton
+br = 
 
 ca = Katal\u00e1nsky
 
@@ -77,11 +77,11 @@ fr = Francouzsky
 
 gl = Galicij\u0161tinsky
 
-guiAddButton=Add...
+guiAddButton=
 guiCancelButton = Storno
 
 guiCheckComplete = LanguageTool kontrola byla ukon\u010dena
-guiCloseButton=Close
+guiCloseButton=
 
 guiConfigWindowTitle = LanguageTool nastaven\u00ed
 
@@ -108,7 +108,7 @@ guiMenuOptions = Nastaven\u00ed...
 
 guiMenuQuit = Konec
 
-guiMenuShowMainWindow = Open main window
+guiMenuShowMainWindow = 
 
 guiMotherTongue = V\u00e1\u0161 mate\u0159sk\u00fd jazyk\:
 
@@ -116,7 +116,7 @@ guiNoErrorsFound = \u017d\u00e1dn\u00e9 chyby ani varov\u00e1n\u00ed nebyly nale
 
 guiNoErrorsFoundSelectedText = \u017d\u00e1dn\u00e9 chyby ani varov\u00e1n\u00ed nebyly vo vyzna\u010den\u00e9m textu nalezeny (jazyk\: {0})
 
-guiOKButton = &OK
+guiOKButton = 
 
 guiOOoChangeButton = Zam\u011bnit
 
@@ -130,7 +130,7 @@ guiOOoOptionsButton = Nastaven\u00ed...
 
 guiProgressWindowTitle = LanguageTool\: Kontrola textu...
 
-guiRemoveButton=Remove
+guiRemoveButton=
 guiReplaceWindowTitle = Zam\u011bnit text
 
 guiReplaceWithOtherText = <jin\u00fd text>
@@ -139,7 +139,7 @@ guiRunOnPort = Pob\u011b\u017e\u00ed jako server na portu
 
 guiSelectionCheckComplete = LanguageTool kontrola ozna\u010den\u00e9ho textu je ukon\u010dena.
 
-guiTagText = &Tag Text
+guiTagText = 
 
 incorrect_case = Tato v\u011bta neza\u010d\u00edn\u00e1 z velk\u00fdm p\u00edsmenem
 
@@ -201,5 +201,5 @@ whitespace_repetition = Mo\u017en\u00fd p\u0159eklep\: zopakovali jste mezeru
 
 ro = Rumunsky
 
-zh = Chinese
+zh = 
 
