--- a/trunk/JLanguageTool/src/java/de/danielnaber/languagetool/MessagesBundle_da.properties
+++ b/trunk/JLanguageTool/src/java/de/danielnaber/languagetool/MessagesBundle_da.properties
@@ -1,13 +1,13 @@
 # English translation of LanguageTool
 # Copyright (C) 2006 Daniel Naber (http://www.danielnaber.de), Marcin Milkowski
 
-atd = Automatically detect language
+atd = 
 
-ast = Asturian
+ast = 
 
 be = Hviderussisk
 
-br = Breton
+br = 
 
 ca = Catalansk
 
@@ -77,11 +77,11 @@ fr = Fransk
 
 gl = Galicisk
 
-guiAddButton=Add...
+guiAddButton=
 guiCancelButton = Annuller
 
 guiCheckComplete = LanguageTools kontrol er f\u00e6rdig.
-guiCloseButton=Close
+guiCloseButton=
 
 guiConfigWindowTitle = LanguageTool Indstillinger
 
@@ -116,9 +116,9 @@ guiNoErrorsFound = Ingen fejl eller advarsler fundet (sprog\: {0})
 
 guiNoErrorsFoundSelectedText = Ingen fejl eller advarsler fundet i den markerede tekst (sprog\: {0})
 
-guiOKButton = &OK
+guiOKButton = 
 
-guiOOoChangeButton = &Change
+guiOOoChangeButton = 
 
 guiOOoCloseButton = &Luk
 
@@ -130,7 +130,7 @@ guiOOoOptionsButton = In&dstillinger...
 
 guiProgressWindowTitle = LanguageTool\: Kontrollere teks...
 
-guiRemoveButton=Remove
+guiRemoveButton=
 guiReplaceWindowTitle = Erstat tekst
 
 guiReplaceWithOtherText = <anden tekst>
@@ -139,7 +139,7 @@ guiRunOnPort = K\u00f8r som service p\u00e5 po&rt
 
 guiSelectionCheckComplete = LanguageTools kontrol af markerede tekst er f\u00e6rdig.
 
-guiTagText = &Tag Text
+guiTagText = 
 
 incorrect_case = Denne s\u00e6tning starter ikke med et stort begyndelsesbogstav
 
@@ -201,5 +201,5 @@ whitespace_repetition = Mulig sl\u00e5fejl\: du har gentaget et mellemrum
 
 ro = Rum\u00e6nsk
 
-zh = Chinese
+zh = 
 
