--- a/trunk/JLanguageTool/src/java/de/danielnaber/languagetool/MessagesBundle_fr.properties
+++ b/trunk/JLanguageTool/src/java/de/danielnaber/languagetool/MessagesBundle_fr.properties
@@ -1,7 +1,7 @@
 # English translation of LanguageTool
 # Copyright (C) 2006 Daniel Naber (http://www.danielnaber.de), Marcin Milkowski
 
-atd = Automatically detect language
+atd = D\u00e9tecter la langue automatiquement
 
 ast = Asturien
 
@@ -13,7 +13,7 @@ ca = Catalan
 
 category_case = Majuscules
 
-category_false_friend = Faux amis
+category_false_friend = Faux-amis
 
 category_grammar = Grammaire
 
@@ -65,7 +65,7 @@ errorMessage = Message \:
 
 es = Espagnol
 
-false_friend = Faux ami
+false_friend = Faux-ami
 
 false_friend_desc = note concernant les faux-amis \:
 
@@ -77,11 +77,11 @@ fr = Fran\u00e7ais
 
 gl = Galicien
 
-guiAddButton=Add...
+guiAddButton=Ajouter...
 guiCancelButton = Annuler
 
 guiCheckComplete = La v\u00e9rification de LanguageTool est termin\u00e9e.
-guiCloseButton=Close
+guiCloseButton=Fermer
 
 guiConfigWindowTitle = Options de LanguageTool
 
@@ -90,21 +90,21 @@ guiLanguageManagerDialog=Language Module Manager
 
 guiMatchCount = Erreurs possibles \:
 
-guiMenuAbout = \u00c0 propos...
+guiMenuAbout = \u00c0 &propos...
 
-guiMenuAddRules = Charger un fichier de r\u00e8gles
+guiMenuAddRules = Charger un fichier de &r\u00e8gles
 
-guiMenuCheckClipboard = V\u00e9rifier le texte dans le presse-papiers
+guiMenuCheckClipboard = &V\u00e9rifier le texte dans le presse-papiers
 
-guiMenuFile = Fichier
+guiMenuFile = &Fichier
 
-guiMenuHelp = Aide
+guiMenuHelp = &Aide
 
-guiMenuHide = R\u00e9duire dans la barre des t\u00e2ches
+guiMenuHide = R\u00e9duire dans la &barre des t\u00e2ches
 
-guiMenuOpen = Ouvrir...
+guiMenuOpen = Ou&vrir...
 
-guiMenuOptions = Options...
+guiMenuOptions = &Options...
 
 guiMenuQuit = &Quitter
 
@@ -112,13 +112,13 @@ guiMenuShowMainWindow = Ouvrir la fen\u00eatre principale
 
 guiMotherTongue = Langue maternelle \:
 
-guiNoErrorsFound = Ni alerte ni erreur n'ont \u00e9t\u00e9 trouv\u00e9es (language\: {0})
+guiNoErrorsFound = Aucune alerte ni erreur n'ont \u00e9t\u00e9 trouv\u00e9es (langue\: {0})
 
-guiNoErrorsFoundSelectedText = Ni alerte ni erreur n'ont \u00e9t\u00e9 trouv\u00e9es pour le texte s\u00e9lectionn\u00e9 (language\: {0})
+guiNoErrorsFoundSelectedText = Aucune alerte ni erreur n'ont \u00e9t\u00e9 trouv\u00e9es pour le texte s\u00e9lectionn\u00e9 (langue\: {0})
 
 guiOKButton = &OK
 
-guiOOoChangeButton = Changer
+guiOOoChangeButton = Chan&ger
 
 guiOOoCloseButton = Fermer
 
@@ -130,16 +130,16 @@ guiOOoOptionsButton = Options...
 
 guiProgressWindowTitle = LanguageTool \: V\u00e9rification en cours...
 
-guiRemoveButton=Remove
+guiRemoveButton=Supprimer
 guiReplaceWindowTitle = Remplacer le texte
 
-guiReplaceWithOtherText = <other text>
+guiReplaceWithOtherText = <autre texte>
 
 guiRunOnPort = Ex\u00e9cuter en tant que serveur sur le port
 
 guiSelectionCheckComplete = La v\u00e9rification de LanguageTool pour le texte s\u00e9lectionn\u00e9 est termin\u00e9e.
 
-guiTagText = &Tag Text
+guiTagText = \u00c9&tiquetter le texte
 
 incorrect_case = Cette phrase ne commence pas par une majuscule
 
