--- a/trunk/JLanguageTool/src/java/de/danielnaber/languagetool/MessagesBundle_is.properties
+++ b/trunk/JLanguageTool/src/java/de/danielnaber/languagetool/MessagesBundle_is.properties
@@ -1,15 +1,15 @@
 # English translation of LanguageTool
 # Copyright (C) 2006 Daniel Naber (http://www.danielnaber.de), Marcin Milkowski
 
-atd = Automatically detect language
+atd = 
 
-ast = Asturian
+ast = 
 
-be = Belarusian
+be = 
 
-br = Breton
+br = 
 
-ca = Catalan
+ca = 
 
 category_case = H\u00e1stafur/l\u00e1gstafur
 
@@ -29,7 +29,7 @@ correctionMessage = Lei\u00f0r\u00e9tting\:
 
 cs = t\u00e9kkneska
 
-da = Danish
+da = 
 
 de = \u00fe\u00fdska
 
@@ -75,13 +75,13 @@ false_friend_suggestion = \u00c1ttir\u00f0u vi\u00f0 {0}?
 
 fr = franska
 
-gl = Galician
+gl = 
 
-guiAddButton=Add...
+guiAddButton=
 guiCancelButton = H\u00e6tta vi\u00f0
 
 guiCheckComplete = LanguageTool yfirlestri er loki\u00f0.
-guiCloseButton=Close
+guiCloseButton=
 
 guiConfigWindowTitle = LanguageTool valkostir
 
@@ -130,7 +130,7 @@ guiOOoOptionsButton = Valkostir...
 
 guiProgressWindowTitle = LanguageTool\: Les yfir texta...
 
-guiRemoveButton=Remove
+guiRemoveButton=
 guiReplaceWindowTitle = Skipta \u00fat texta
 
 guiReplaceWithOtherText = <annar texti>
@@ -139,7 +139,7 @@ guiRunOnPort = Keyra \u00fej\u00f3n \u00e1 netg\u00e1tt nr.
 
 guiSelectionCheckComplete = LanguageTool hefur loki\u00f0 yfirlestri.
 
-guiTagText = &Tag Text
+guiTagText = 
 
 incorrect_case = \u00deessi setning hefst ekki \u00e1 h\u00e1staf
 
@@ -175,7 +175,7 @@ resultTime = <br>Time\: {0}ms (including {1}ms for rule matching)<br>
 
 ru = r\u00fassneska
 
-sk = Slovak
+sk = 
 
 sl = sl\u00f3venska
 
@@ -185,7 +185,7 @@ startChecking = Hef yfirlestur\: {0}
 
 sv = s\u00e6nska
 
-tl = Tagalog
+tl = 
 
 textLanguage = Tungum\u00e1l texta\:
 
@@ -199,7 +199,7 @@ unpaired_brackets = Svigar (e\u00f0a svipu\u00f0 t\u00e1kn) standast ekki \u00e1
 
 whitespace_repetition = Hugsanleg ritvilla\: endurteki\u00f0 bil
 
-ro = Romanian
+ro = 
 
-zh = Chinese
+zh = 
 
