--- a/trunk/JLanguageTool/src/java/de/danielnaber/languagetool/MessagesBundle_km.properties
+++ b/trunk/JLanguageTool/src/java/de/danielnaber/languagetool/MessagesBundle_km.properties
@@ -1,13 +1,13 @@
 # English translation of LanguageTool
 # Copyright (C) 2006 Daniel Naber (http://www.danielnaber.de), Marcin Milkowski
 
-atd = Automatically detect language
+atd = 
 
-ast = Asturian
+ast = 
 
 be = \u1794\u17c1\u17a1\u17b6\u179a\u17bb\u179f\u17d2\u179f
 
-br = Breton
+br = 
 
 ca = \u1780\u17b6\u178f\u17b6\u17a1\u17b6\u1793
 
@@ -43,23 +43,23 @@ desc_repetition_short = \u1798\u17b6\u1793\u200b\u200b\u179c\u17b6\u179a\u17c1\u
 
 desc_unpaired_brackets = \u1798\u17b6\u1793\u200b\u179a\u17c9\u17b6\u178f\u17cb \u1783\u17d2\u1793\u17b6\u1794 \u17a2\u1796\u17d2\u1797\u1793\u17d2\u178f\u179a\u200b\u179f\u1789\u17d2\u1789\u17b6 \u17ac\u200b\u179f\u1789\u17d2\u1789\u17b6\u200b\u1798\u17bd\u1799\u200b\u178e\u17b6\u200b\u1795\u17d2\u179f\u17c1\u1784\u200b\u1791\u17c0\u178f\u200b\u178a\u17c2\u179b\u200b\u1797\u17d2\u179b\u17c1\u1785\u200b\u178a\u17b6\u1780\u17cb\u200b\u1782\u17bc
 
-desc_uppercase_sentence = Checks that a sentence starts with an uppercase letter
+desc_uppercase_sentence = 
 
-desc_whitespacerepetition = Whitespace repetition (bad formatting)
+desc_whitespacerepetition = 
 
-double_dots_short = Two consecutive dots
+double_dots_short = 
 
-double_commas_short = Two consecutive comma
+double_commas_short = 
 
 en = \u17a2\u1784\u17cb\u1782\u17d2\u179b\u17c1\u179f
 
-enterText = Please type or paste text to check in the top area
+enterText = 
 
-enterText2 = Please insert text to check here
+enterText2 = 
 
 eo = \u17a2\u17c1\u179f\u17d2\u1796\u17c1\u179a\u17c9\u17b6\u1793\u17cb\u178f\u17bc
 
-errorContext = Context\:
+errorContext = 
 
 errorMessage = \u179f\u17b6\u179a\u17d6
 
@@ -67,40 +67,40 @@ es = \u17a2\u17c1\u179f\u17d2\u1794\u17c9\u17b6\u1789
 
 false_friend = \u1796\u1796\u17bd\u1780\u200b\u1796\u17b6\u1780\u17d2\u1799\u200b\u178a\u17c2\u179b\u200b\u1798\u17b6\u1793\u200b\u1780\u17b6\u179a\u200b\u1794\u1793\u17d2\u179b\u17ba\u200b\u179f\u17c6\u17a1\u17c1\u1784\u200b\u178a\u17bc\u1785\u200b\u1782\u17d2\u1793\u17b6\u200b\u178f\u17c2\u200b\u1798\u17b6\u1793\u200b\u1793\u17d0\u1799\u200b\u1781\u17bb\u179f\u200b\u1782\u17d2\u1793\u17b6
 
-false_friend_desc = false friend hint for\:
+false_friend_desc = 
 
-false_friend_hint = Hint\: "{0}" ({1}) means {2} ({3}).
+false_friend_hint = 
 
-false_friend_suggestion = Did you mean {0}?
+false_friend_suggestion = 
 
 fr = \u1794\u17b6\u179a\u17b6\u17c6\u1784
 
 gl = \u17a0\u17d2\u1780\u17b6\u179b\u17b8\u179f\u17ca\u17b8
 
-guiAddButton=Add...
+guiAddButton=
 guiCancelButton = \u1794\u17c4\u17c7\u1794\u1784\u17cb
 
-guiCheckComplete = LanguageTool check is complete.
-guiCloseButton=Close
+guiCheckComplete = 
+guiCloseButton=
 
-guiConfigWindowTitle = LanguageTool Options
+guiConfigWindowTitle = 
 
-guiDemoText = This is a example input to to show you how LanguageTool works. Note, however, that it does not include a spell checka.
-guiLanguageManagerDialog=Language Module Manager
+guiDemoText = 
+guiLanguageManagerDialog=
 
-guiMatchCount = Potential errors\:
+guiMatchCount = 
 
-guiMenuAbout = &About...
+guiMenuAbout = 
 
-guiMenuAddRules = Load &Rule File
+guiMenuAddRules = 
 
-guiMenuCheckClipboard = &Check Text in Clipboard
+guiMenuCheckClipboard = 
 
 guiMenuFile = &\u17af\u1780\u179f\u17b6\u179a
 
 guiMenuHelp = &\u1787\u17c6\u1793\u17bd\u1799
 
-guiMenuHide = &Hide to System Tray
+guiMenuHide = 
 
 guiMenuOpen = &\u1794\u17be\u1780...
 
@@ -108,40 +108,40 @@ guiMenuOptions = \u1787\u1798\u17d2\u179a\u17be\u179f&\u1781\u17d2\u179b\u17c7\u
 
 guiMenuQuit = &\u1785\u17b6\u1780\u1785\u17c1\u1789
 
-guiMenuShowMainWindow = Open Main Window
+guiMenuShowMainWindow = 
 
 guiMotherTongue = \u179f\u1780\u1797\u17b6\u179f\u17b6\u200b\u179a\u1794\u179f\u17cb\u200b\u17a2\u17d2\u1793\u1780\u17d6
 
-guiNoErrorsFound = No errors or warnings found (language\: {0})
+guiNoErrorsFound = 
 
-guiNoErrorsFoundSelectedText = No errors or warnings found in selected text (language\: {0})
+guiNoErrorsFoundSelectedText = 
 
-guiOKButton = &OK
+guiOKButton = 
 
-guiOOoChangeButton = &Change
+guiOOoChangeButton = 
 
-guiOOoCloseButton = Close
+guiOOoCloseButton = 
 
-guiOOoIgnoreAllButton = Ignore All
+guiOOoIgnoreAllButton = 
 
-guiOOoIgnoreButton = Ignore
+guiOOoIgnoreButton = 
 
-guiOOoOptionsButton = Options...
+guiOOoOptionsButton = 
 
-guiProgressWindowTitle = LanguageTool\: Checking Text...
+guiProgressWindowTitle = 
 
-guiRemoveButton=Remove
-guiReplaceWindowTitle = Replace text
+guiRemoveButton=
+guiReplaceWindowTitle = 
 
-guiReplaceWithOtherText = <other text>
+guiReplaceWithOtherText = 
 
-guiRunOnPort = Run as server on po&rt
+guiRunOnPort = 
 
-guiSelectionCheckComplete = LanguageTool check of selected text is complete.
+guiSelectionCheckComplete = 
 
-guiTagText = &Tag Text
+guiTagText = 
 
-incorrect_case = This sentence does not start with an uppercase letter
+incorrect_case = 
 
 is = \u17a2\u17ca\u17b8\u179f\u17d2\u179b\u1784\u17cb
 
@@ -151,27 +151,27 @@ km = \u1781\u17d2\u1798\u17c2\u179a
 
 lt = \u179b\u17b8\u1791\u17bb\u1799\u17a2\u17b6\u1793\u17b8
 
-missing_space_after_comma = Put a space after the comma
+missing_space_after_comma = 
 
 ml = \u1798\u17c9\u17b6\u17a1\u17b6\u1799\u17c9\u17b6\u17a1\u17b6\u1798
 
 nl = \u17a0\u17bb\u179b\u17d2\u179b\u1784\u17cb
 
-no_space_after = Don't put a space after the opening parenthesis
+no_space_after = 
 
-no_space_before = Don't put a space before the closing parenthesis
+no_space_before = 
 
-no_space_before_dot = Don't put a space before the full stop
+no_space_before_dot = 
 
 pl = \u1794\u17c9\u17bc\u17a1\u17bc\u1789
 
-repetition = Possible typo\: you repeated a word
+repetition = 
 
-result1 = <br><b> {0}. Line {1}, column {2}</b><br>
+result1 = 
 
-resultAreaText = Results will appear here
+resultAreaText = 
 
-resultTime = <br>Time\: {0}ms (including {1}ms for rule matching)<br>
+resultTime = 
 
 ru = \u179a\u17bb\u179f\u17d2\u179f\u17ca\u17b8
 
@@ -179,27 +179,27 @@ sk = \u179f\u17d2\u179b\u17bc\u179c\u17c9\u17b6\u1782\u17b8
 
 sl = \u179f\u17d2\u179b\u17bc\u179c\u17c9\u17b6\u1793\u17b8
 
-space_after_comma = Put a space after the comma, but not before the comma
+space_after_comma = 
 
-startChecking = Starting check in {0}
+startChecking = 
 
 sv = \u179f\u17ca\u17bb\u1799\u17a2\u17c2\u178a
 
-tl = Tagalog
+tl = 
 
 textLanguage = \u1797\u17b6\u179f\u17b6\u200b\u179a\u1794\u179f\u17cb\u200b\u17a2\u178f\u17d2\u1790\u1794\u1791\u17d6
 
-two_commas = Two consecutive commas
+two_commas = 
 
-two_dots = Two consecutive dots
+two_dots = 
 
 uk = \u17a2\u17ca\u17bb\u1799\u1780\u17d2\u179a\u17c2\u1793
 
-unpaired_brackets = Unpaired bracket or similar symbol
+unpaired_brackets = 
 
-whitespace_repetition = Possible typo\: you repeated a whitespace
+whitespace_repetition = 
 
 ro = \u179a\u17bc\u1798\u17c9\u17b6\u1793\u17b8
 
-zh = Chinese
+zh = 
 
