--- a/trunk/JLanguageTool/src/java/de/danielnaber/languagetool/MessagesBundle_lt.properties
+++ b/trunk/JLanguageTool/src/java/de/danielnaber/languagetool/MessagesBundle_lt.properties
@@ -1,13 +1,13 @@
 # English translation of LanguageTool
 # Copyright (C) 2006 Daniel Naber (http://www.danielnaber.de), Marcin Milkowski
 
-atd = Automatically detect language
+atd = 
 
-ast = Asturian
+ast = 
 
 be = Baltarusi\u0173
 
-br = Breton
+br = 
 
 ca = Katalon\u0173
 
@@ -19,13 +19,13 @@ category_grammar = Gramatika
 
 category_misc = Kiti
 
-category_typo = Possible Typo
+category_typo = 
 
 checkDone = Tikrinimas baigtas, rasta galim\u0173 klaid\u0173\: {0}
 
 checkText = Tikrinti tekst\u0105
 
-correctionMessage = Correction\:
+correctionMessage = 
 
 cs = \u010dek\u0173
 
@@ -39,17 +39,17 @@ desc_double_punct = Ar n\u0117ra dviej\u0173 pasikartojan\u010di\u0173 ta\u0161k
 
 desc_repetition = Pasikartojantys \u017eod\u017eiai (pvz. "ar ar")
 
-desc_repetition_short = Word repetition
+desc_repetition_short = 
 
-desc_unpaired_brackets = Unpaired braces, brackets, quotation marks and similar symbols
+desc_unpaired_brackets = 
 
 desc_uppercase_sentence = Tikrinti ar sakinys prasideda i\u0161 did\u017eiosios raid\u0117s
 
-desc_whitespacerepetition = Whitespace repetition (bad formatting)
+desc_whitespacerepetition = 
 
-double_dots_short = Two consecutive dots
+double_dots_short = 
 
-double_commas_short = Two consecutive comma
+double_commas_short = 
 
 en = angl\u0173
 
@@ -65,34 +65,34 @@ errorMessage = Klaida\:
 
 es = ispan\u0173
 
-false_friend = False friend
+false_friend = 
 
 false_friend_desc = netikras draugas\:
 
-false_friend_hint = Hint\: "{0}" ({1}) means {2} ({3}).
+false_friend_hint = 
 
-false_friend_suggestion = Did you mean {0}?
+false_friend_suggestion = 
 
 fr = pranc\u016bz\u0173
 
-gl = Galician
+gl = 
 
-guiAddButton=Add...
+guiAddButton=
 guiCancelButton = At\u0161aukti
 
 guiCheckComplete = Gramatikos tikrinimas baigtas.
-guiCloseButton=Close
+guiCloseButton=
 
 guiConfigWindowTitle = Gramatikos \u012frankio nustatymai
 
 guiDemoText = \u010dia yra pavyzdinis tekstas gramatikos tikrinimui tikrinimui. Atsiminkite , kad \u017eod\u017ei\u0173 ra\u0161yba netikrynama.
-guiLanguageManagerDialog=Language Module Manager
+guiLanguageManagerDialog=
 
 guiMatchCount = Rasta galim\u0173 klaid\u0173\:
 
 guiMenuAbout = Apie...
 
-guiMenuAddRules = Load Rule File
+guiMenuAddRules = 
 
 guiMenuCheckClipboard = Tikrinti nukopijuot\u0105 tekst\u0105 i\u0161karpin\u0117je
 
@@ -108,7 +108,7 @@ guiMenuOptions = Nustatymai...
 
 guiMenuQuit = I\u0161eiti
 
-guiMenuShowMainWindow = Open main window
+guiMenuShowMainWindow = 
 
 guiMotherTongue = Gimtoji kalba\:
 
@@ -130,7 +130,7 @@ guiOOoOptionsButton = Nustatymai...
 
 guiProgressWindowTitle = Gramatika\: Tikrinamas tekstas...
 
-guiRemoveButton=Remove
+guiRemoveButton=
 guiReplaceWindowTitle = Pakeisti tekst\u0105
 
 guiReplaceWithOtherText = <kitas tekstas>
@@ -139,7 +139,7 @@ guiRunOnPort = Paleisti tikrinimo server\u012f, prievadas\:
 
 guiSelectionCheckComplete = Pa\u017eym\u0117to teksto gramatikos tikrinimas baigtas.
 
-guiTagText = &Tag Text
+guiTagText = 
 
 incorrect_case = Sakinys turi prasid\u0117ti i\u0161 did\u017eiosios raid\u0117s
 
@@ -147,7 +147,7 @@ is = island\u0173
 
 it = ital\u0173
 
-km = Khmer
+km = 
 
 lt = lietuvi\u0173
 
@@ -161,13 +161,13 @@ no_space_after = Nereikia d\u0117ti tarpo po atidaran\u010dio skliaustelio
 
 no_space_before = Nereikia d\u0117ti tarpo prie\u0161 u\u017edarant\u012f skliaustel\u012f
 
-no_space_before_dot = Don't put a space before the full stop
+no_space_before_dot = 
 
 pl = lenk\u0173
 
-repetition = Possible typo\: you repeated a word
+repetition = 
 
-result1 = <br><b> {0}. Line {1}, column {2}</b><br>
+result1 = 
 
 resultAreaText = Rezultatai bus pateikti \u010dia
 
@@ -177,7 +177,7 @@ ru = rus\u0173
 
 sk = slovak\u0173
 
-sl = Slovenian
+sl = 
 
 space_after_comma = Tarp\u0105 reikia d\u0117ti po kablelio, o ne prie\u0161 j\u012f
 
@@ -185,7 +185,7 @@ startChecking = Pradedamas tikrinimas kalbai\: {0}
 
 sv = \u0161ved\u0173
 
-tl = Tagalog
+tl = 
 
 textLanguage = Teksto kalba\:
 
@@ -197,9 +197,9 @@ uk = ukrainie\u010di\u0173
 
 unpaired_brackets = Unpaired bracket or similar symbol
 
-whitespace_repetition = Possible typo\: you repeated a whitespace
+whitespace_repetition = 
 
 ro = Rom\u00e2n\u0103
 
-zh = Chinese
+zh = 
 
