--- a/trunk/JLanguageTool/src/java/de/danielnaber/languagetool/MessagesBundle_ro.properties
+++ b/trunk/JLanguageTool/src/java/de/danielnaber/languagetool/MessagesBundle_ro.properties
@@ -1,13 +1,13 @@
 # English translation of LanguageTool
 # Copyright (C) 2006 Daniel Naber (http://www.danielnaber.de), Marcin Milkowski
 
-atd = Automatically detect language
+atd = 
 
-ast = Asturian
+ast = 
 
 be = Bielorus\u0103
 
-br = Breton
+br = 
 
 ca = Catalan\u0103
 
@@ -59,7 +59,7 @@ enterText2 = V\u0103 rug\u0103m s\u0103 insera\u021bi textul de verificat aici
 
 eo = Esperanto
 
-errorContext = Context\:
+errorContext = 
 
 errorMessage = Mesaj\:
 
@@ -77,11 +77,11 @@ fr = Francez\u0103
 
 gl = Galician\u0103
 
-guiAddButton=Add...
+guiAddButton=
 guiCancelButton = Renun\u021b\u0103
 
 guiCheckComplete = Verificarea f\u0103cut\u0103 de LanguageTool este complet\u0103.
-guiCloseButton=Close
+guiCloseButton=
 
 guiConfigWindowTitle = Op\u021biuni pentru LanguageTool
 
@@ -116,7 +116,7 @@ guiNoErrorsFound = Nu s-au g\u0103sit erori sau avertismente (limba {0})
 
 guiNoErrorsFoundSelectedText = Nu s-au g\u0103sit erori sau avertismente \u00een textul selectat (limba {0})
 
-guiOKButton = &OK
+guiOKButton = 
 
 guiOOoChangeButton = S&chimb\u0103
 
@@ -130,7 +130,7 @@ guiOOoOptionsButton = Op\u021biuni...
 
 guiProgressWindowTitle = LanguageTool\: Se verific\u0103 textul...
 
-guiRemoveButton=Remove
+guiRemoveButton=
 guiReplaceWindowTitle = \u00eenlocuire text
 
 guiReplaceWithOtherText = <alt text>
@@ -139,7 +139,7 @@ guiRunOnPort = Ruleaz\u0103 ca server pe po&rtul
 
 guiSelectionCheckComplete = Verificarea LanguageTool a textului selectat este complet\u0103.
 
-guiTagText = &Tag Text
+guiTagText = 
 
 incorrect_case = Propozi\u021bia nu \u00eencepe cu liter\u0103 mare
 
@@ -147,7 +147,7 @@ is = Islandez\u0103
 
 it = Italian\u0103
 
-km = Khmer
+km = 
 
 lt = Lituanian\u0103
 
@@ -185,7 +185,7 @@ startChecking = Verificarea \u00eencepe \u00een {0}
 
 sv = Suedez\u0103
 
-tl = Tagalog
+tl = 
 
 textLanguage = Limba textului\:
 
@@ -193,7 +193,7 @@ two_commas = Dou\u0103 virgule consecutive
 
 two_dots = Dou\u0103 puncte consecutive
 
-uk = Ukrainian
+uk = 
 
 unpaired_brackets = Parantez\u0103 nepereche
 
@@ -201,5 +201,5 @@ whitespace_repetition = Posibi\u0103 gre\u0219eal\u0103\: a\u021bi repetat un sp
 
 ro = Rom\u00e2n\u0103
 
-zh = Chinese
+zh = 
 
