--- a/trunk/JLanguageTool/src/java/de/danielnaber/languagetool/MessagesBundle_sv.properties
+++ b/trunk/JLanguageTool/src/java/de/danielnaber/languagetool/MessagesBundle_sv.properties
@@ -1,13 +1,13 @@
 # English translation of LanguageTool
 # Copyright (C) 2006 Daniel Naber (http://www.danielnaber.de), Marcin Milkowski
 
-atd = Automatically detect language
+atd = 
 
-ast = Asturian
+ast = 
 
 be = Vitryska
 
-br = Breton
+br = 
 
 ca = Katalanska
 
@@ -77,11 +77,11 @@ fr = Franska
 
 gl = Galiciska
 
-guiAddButton=Add...
+guiAddButton=
 guiCancelButton = Avbryt
 
 guiCheckComplete = LanguageTool kontroll \u00e4r f\u00e4rdig.
-guiCloseButton=Close
+guiCloseButton=
 
 guiConfigWindowTitle = LanguageTool Alternativ
 
@@ -130,7 +130,7 @@ guiOOoOptionsButton = Alternativ...
 
 guiProgressWindowTitle = LanguageTool\: Kontrollerar text...
 
-guiRemoveButton=Remove
+guiRemoveButton=
 guiReplaceWindowTitle = Ers\u00e4tt text
 
 guiReplaceWithOtherText = <annan text>
@@ -139,7 +139,7 @@ guiRunOnPort = K\u00f6r server p\u00e5 po&rt
 
 guiSelectionCheckComplete = LanguageTool kontroll av markerad text \u00e4r utf\u00f6rd.
 
-guiTagText = &Tag Text
+guiTagText = 
 
 incorrect_case = Denna mening b\u00f6rjar med liten bokstav
 
@@ -147,13 +147,13 @@ is = Isl\u00e4ndska
 
 it = Italienska
 
-km = Khmer
+km = 
 
 lt = Litauiska
 
 missing_space_after_comma = L\u00e4gg till ett blanksteg efter kommatecknet
 
-ml = Malayalam
+ml = 
 
 nl = Holl\u00e4ndska
 
@@ -201,5 +201,5 @@ whitespace_repetition = M\u00f6jlig felskrivning\: du har gjort upprepade mellan
 
 ro = Rom\u00e2n\u0103
 
-zh = Chinese
+zh = 
 
