--- a/trunk/JLanguageTool/src/java/de/danielnaber/languagetool/MessagesBundle_tl.properties
+++ b/trunk/JLanguageTool/src/java/de/danielnaber/languagetool/MessagesBundle_tl.properties
@@ -37,7 +37,7 @@ desc_comma_whitespace = Use of whitespace before comma and before/after parenthe
 
 desc_double_punct = Use of two consecutive dots or commas
 
-desc_repetition = Word repetition (e.g. 'will will')
+desc_repetition = Word repetition (e.g. 'pagkain pagkain')
 
 desc_repetition_short = Word repetition
 
@@ -85,7 +85,7 @@ guiCloseButton=Close
 
 guiConfigWindowTitle = LanguageTool Options
 
-guiDemoText = Ang LanguageTool ay maganda gamit sa araw-araw. Ang talatang ito ay halimbawa kung paano  dito gamitin ang LanguageTool. Litaw sa pangungusap ding na ito na may mga bagaybagay na hindii pa kayang itama nang LanguageTool.
+guiDemoText = Ang LanguageTool ay maganda gamit sa araw-araw. Ang talatang ito ay nagpapakita ng ng kakayahan ng LanguageTool at hinahalimbawa kung paano ito gamitin. Litaw rin sa talatang ito na may mga bagaybagay na hindii pa kayang itama nng LanguageTool.
 guiLanguageManagerDialog=Language Module Manager
 
 guiMatchCount = Potential errors\:
