--- a/trunk/JLanguageTool/src/java/de/danielnaber/languagetool/MessagesBundle_be.properties
+++ b/trunk/JLanguageTool/src/java/de/danielnaber/languagetool/MessagesBundle_be.properties
@@ -1,13 +1,13 @@
 # English translation of LanguageTool
 # Copyright (C) 2006 Daniel Naber (http://www.danielnaber.de), Marcin Milkowski
 
-atd = Automatically detect language
+atd = \u0412\u044b\u0437\u043d\u0430\u0447\u044b\u0446\u044c \u043c\u043e\u0432\u0443 \u0430\u045e\u0442\u0430\u043c\u0430\u0442\u044b\u0447\u043d\u0430
 
 ast = \u0410\u0441\u0442\u0443\u0440\u044b\u0439\u0441\u043a\u0430\u0433\u0430
 
 be = \u0411\u0435\u043b\u0430\u0440\u0443\u0441\u043a\u0430\u044f
 
-br = Breton
+br = \u0411\u0440\u044d\u0442\u043e\u043d\u0441\u043a\u0430\u044f
 
 ca = \u041a\u0430\u0442\u0430\u043b\u043e\u043d\u0441\u043a\u0430\u044f
 
@@ -201,5 +201,5 @@ whitespace_repetition = \u041c\u0430\u0433\u0447\u044b\u043c\u0430\u044f \u043f\
 
 ro = \u0420\u0443\u043c\u044b\u043d\u0441\u043a\u0430\u044f
 
-zh = \u041a\u0456\u0442\u0430\u0439\u0441\u043a\u0456
+zh = \u041a\u0456\u0442\u0430\u0439\u0441\u043a\u0430\u044f
 
