--- a/trunk/JLanguageTool/src/java/de/danielnaber/languagetool/MessagesBundle_it.properties
+++ b/trunk/JLanguageTool/src/java/de/danielnaber/languagetool/MessagesBundle_it.properties
@@ -1,13 +1,13 @@
 # English translation of LanguageTool
 # Copyright (C) 2006 Daniel Naber (http://www.danielnaber.de), Marcin Milkowski
 
-atd = Automatically detect language
+atd = 
 
-ast = Asturian
+ast = 
 
 be = Bielorusso
 
-br = Breton
+br = 
 
 ca = Catalano
 
@@ -77,11 +77,11 @@ fr = Francese
 
 gl = Galiziano
 
-guiAddButton=Add...
+guiAddButton=
 guiCancelButton = Annulla
 
 guiCheckComplete = LanguageTool ha completato il controllo.
-guiCloseButton=Close
+guiCloseButton=
 
 guiConfigWindowTitle = Opzioni LanguageTool
 
@@ -116,7 +116,7 @@ guiNoErrorsFound = Niente da segnalare (linguaggio\: {0})
 
 guiNoErrorsFoundSelectedText = Niente da segnalare nel testo selezionato (linguaggio\: {0})
 
-guiOKButton = &OK
+guiOKButton = 
 
 guiOOoChangeButton = &Cambia
 
@@ -130,7 +130,7 @@ guiOOoOptionsButton = Opzioni...
 
 guiProgressWindowTitle = LanguageTool\: Controllo in corso...
 
-guiRemoveButton=Remove
+guiRemoveButton=
 guiReplaceWindowTitle = Rimpiazza il testo
 
 guiReplaceWithOtherText = <altro testo>
@@ -139,7 +139,7 @@ guiRunOnPort = Esegui come server sulla po&rta
 
 guiSelectionCheckComplete = Il controllo LanguageTool del testo selezionato \u010d completo.
 
-guiTagText = &Tag Text
+guiTagText = 
 
 incorrect_case = Questa frase non inizia con una maiuscola
 
@@ -147,13 +147,13 @@ is = Islandese
 
 it = Italiano
 
-km = Khmer
+km = 
 
 lt = Lituano
 
 missing_space_after_comma = Inserire uno spazio dopo la virgola
 
-ml = Malayalam
+ml = 
 
 nl = Olandese
 
@@ -185,7 +185,7 @@ startChecking = Inizio controllo a {0}
 
 sv = Svedese
 
-tl = Tagalog
+tl = 
 
 textLanguage = Linguaggio del testo\:
 
@@ -201,5 +201,5 @@ whitespace_repetition = Probabile errore\: ripetizione di spazio
 
 ro = Rumeno
 
-zh = Chinese
+zh = 
 
