--- a/trunk/JLanguageTool/src/java/de/danielnaber/languagetool/MessagesBundle_ru.properties
+++ b/trunk/JLanguageTool/src/java/de/danielnaber/languagetool/MessagesBundle_ru.properties
@@ -1,13 +1,13 @@
 # English translation of LanguageTool
 # Copyright (C) 2006 Daniel Naber (http://www.danielnaber.de), Marcin Milkowski
 
-atd = Automatically detect language
+atd = \u041e\u043f\u0440\u0435\u0434\u0435\u043b\u0438\u0442\u044c \u044f\u0437\u044b\u043a \u0430\u0432\u0442\u043e\u043c\u0430\u0442\u0438\u0447\u0435\u0441\u043a\u0438
 
 ast = \u0410\u0441\u0442\u0443\u0440\u0438\u0439\u0441\u043a\u0438\u0439
 
 be = \u0411\u0435\u043b\u043e\u0440\u0443\u0441\u0441\u043a\u0438\u0439
 
-br = Breton
+br = \u0411\u0440\u0435\u0442\u043e\u043d\u0441\u043a\u0438\u0439
 
 ca = \u041a\u0430\u0442\u0430\u043b\u0430\u043d\u0441\u043a\u0438\u0439
 
