--- a/trunk/JLanguageTool/src/java/de/danielnaber/languagetool/MessagesBundle_uk.properties
+++ b/trunk/JLanguageTool/src/java/de/danielnaber/languagetool/MessagesBundle_uk.properties
@@ -1,15 +1,15 @@
 # English translation of LanguageTool
 # Copyright (C) 2006 Daniel Naber (http://www.danielnaber.de), Marcin Milkowski
 
-atd = Automatically detect language
+atd = \u0410\u0432\u0442\u043e\u043c\u0430\u0442\u0438\u0447\u043d\u0435 \u0432\u0438\u0437\u043d\u0430\u0447\u0435\u043d\u043d\u044f \u043c\u043e\u0432\u0438
 
-ast = \u0410\u0441\u0442\u0443\u0440\u0456\u0439\u0441\u044c\u043a\u0438\u0439
+ast = \u0410\u0441\u0442\u0443\u0440\u0456\u0439\u0441\u044c\u043a\u0430
 
 be = \u0411\u0456\u043b\u043e\u0440\u0443\u0441\u044c\u043a\u0430
 
-br = Breton
+br = \u0411\u0440\u0435\u0442\u043e\u043d\u0441\u044c\u043a\u0430
 
-ca = Catalan
+ca = \u041a\u0430\u0442\u0430\u043b\u043e\u043d\u0441\u044c\u043a\u0430
 
 category_case = \u0412\u0435\u043b\u0438\u043a\u0456 \u043b\u0456\u0442\u0435\u0440\u0438
 
@@ -75,7 +75,7 @@ false_friend_suggestion = \u0412\u0438 \u043c\u0430\u043b\u0438 \u043d\u0430 \u0
 
 fr = \u0424\u0440\u0430\u043d\u0446\u0443\u0437\u044c\u043a\u0430
 
-gl = Galician
+gl = \u0413\u0430\u043b\u0456\u0441\u0456\u0439\u0441\u044c\u043a\u0430
 
 guiAddButton=\u0414\u043e\u0434\u0430\u0442\u0438 ...
 guiCancelButton = \u0421\u043a\u0430\u0441\u0443\u0432\u0430\u0442\u0438
@@ -92,7 +92,7 @@ guiMatchCount = \u041f\u043e\u0442\u0435\u043d\u0446\u0456\u0439\u043d\u0438\u04
 
 guiMenuAbout = \u041f\u0440\u043e...
 
-guiMenuAddRules = Load Rule File
+guiMenuAddRules = \u0427\u0438\u0442\u0430\u0442\u0438 \u0444\u0430\u0439\u043b \u043f\u0440\u0430\u0432\u0438\u043b
 
 guiMenuCheckClipboard = \u041f\u0435\u0440\u0435\u0432\u0456\u0440\u0438\u0442\u0438 \u0442\u0435\u043a\u0441\u0442 \u0437 \u043a\u0438\u0448\u0435\u043d\u0456
 
@@ -108,7 +108,7 @@ guiMenuOptions = \u041f\u0430\u0440\u0430\u043c\u0435\u0442\u0440\u0438...
 
 guiMenuQuit = \u0412\u0438\u0439\u0442\u0438
 
-guiMenuShowMainWindow = Open main window
+guiMenuShowMainWindow = \u0412\u0456\u0434\u043a\u0440\u0438\u0442\u0438 \u0433\u043e\u043b\u043e\u0432\u043d\u0435 \u0432\u0456\u043a\u043d\u043e
 
 guiMotherTongue = \u0412\u0430\u0448\u0430 \u0440\u0456\u0434\u043d\u0430 \u043c\u043e\u0432\u0430\:
 
@@ -143,7 +143,7 @@ guiTagText = &\u0420\u043e\u0437\u043c\u0456\u0442\u0438\u0442\u0438 \u0442\u043
 
 incorrect_case = \u0426\u0435 \u0440\u0435\u0447\u0435\u043d\u043d\u044f \u043d\u0435 \u043f\u043e\u0447\u0438\u043d\u0430\u0454\u0442\u044c\u0441\u044f \u0437 \u0432\u0435\u043b\u0438\u043a\u043e\u0457 \u043b\u0456\u0442\u0435\u0440\u0438
 
-is = \u0406\u0441\u043b\u0430\u043d\u0434\u0441\u044c\u043a\u0438\u0439
+is = \u0406\u0441\u043b\u0430\u043d\u0434\u0441\u044c\u043a\u0430
 
 it = \u0406\u0442\u0430\u043b\u0456\u0439\u0441\u044c\u043a\u0430
 
@@ -199,7 +199,7 @@ unpaired_brackets = \u041d\u0435\u043f\u0430\u0440\u043d\u0456 \u0434\u0443\u043
 
 whitespace_repetition = \u041f\u043e\u0432\u0442\u043e\u0440 \u043f\u0440\u043e\u0431\u0456\u043b\u0443
 
-ro = Rom\u00e2n\u0103
+ro = \u0420\u0443\u043c\u0443\u043d\u0441\u044c\u043a\u0430
 
-zh = \u041a\u0438\u0442\u0430\u0439\u0441\u044c\u043a\u0438\u0439
+zh = \u041a\u0438\u0442\u0430\u0439\u0441\u044c\u043a\u0430
 
