--- a/trunk/JLanguageTool/src/java/de/danielnaber/languagetool/MessagesBundle_zh.properties
+++ b/trunk/JLanguageTool/src/java/de/danielnaber/languagetool/MessagesBundle_zh.properties
@@ -1,13 +1,13 @@
 # English translation of LanguageTool
 # Copyright (C) 2006 Daniel Naber (http://www.danielnaber.de), Marcin Milkowski
 
-atd = 
+atd = \u81ea\u52a8\u68c0\u6d4b\u8bed\u8a00
 
-ast = 
+ast = \u963f\u65af\u56fe\u91cc\u4e9a\u65af\u8bed
 
 be = \u767d\u4fc4\u7f57\u65af\u8bed
 
-br = Breton
+br = \u5e03\u5217\u5854\u5c3c\u8bed
 
 ca = \u52a0\u6cf0\u7f57\u5c3c\u4e9a\u8bed
 
@@ -21,11 +21,11 @@ category_misc = \u5176\u4ed6
 
 category_typo = \u53ef\u80fd\u7684\u8f93\u5165\u9519\u8bef
 
-checkDone = \u68c0\u67e5\u5b8c\u6210, \u53d1\u73b0{0}\u4e2a\u6f5c\u5728\u95ee\u9898
+checkDone = \u68c0\u67e5\u5b8c\u6210\uff0c\u53d1\u73b0{0}\u4e2a\u6f5c\u5728\u95ee\u9898
 
 checkText = &\u68c0\u67e5
 
-correctionMessage = \u6821\u6b63\:
+correctionMessage = \u6821\u6b63\uff1a
 
 cs = \u6377\u514b\u8bed
 
@@ -37,7 +37,7 @@ desc_comma_whitespace = \u5728\u9017\u53f7\u524d\u548c\u62ec\u53f7\u524d/\u540e\
 
 desc_double_punct = \u4f7f\u7528\u4e24\u4e2a\u8fde\u7eed\u7684\u53e5\u53f7\u6216\u9017\u53f7
 
-desc_repetition = \u8bcd\u8bed\u91cd\u590d
+desc_repetition = \u8bcd\u8bed\u91cd\u590d(\u4f8b\u5982\uff1a\u201cwill will\u201d)
 
 desc_repetition_short = \u8bcd\u8bed\u91cd\u590d
 
@@ -45,7 +45,7 @@ desc_unpaired_brackets = \u4e0d\u6210\u5bf9\u7684\u82b1\u62ec\u53f7\uff0c\u62ec\
 
 desc_uppercase_sentence = \u68c0\u67e5\u4e00\u4e2a\u4ee5\u5927\u5199\u5b57\u6bcd\u5f00\u5934\u7684\u53e5\u5b50
 
-desc_whitespacerepetition = \u7a7a\u683c\u91cd\u590d (\u9519\u8bef\u7684\u683c\u5f0f)
+desc_whitespacerepetition = \u7a7a\u683c\u91cd\u590d(\u9519\u8bef\u7684\u683c\u5f0f)
 
 double_dots_short = \u4e24\u4e2a\u8fde\u7eed\u7684\u53e5\u53f7
 
@@ -59,15 +59,15 @@ enterText2 = \u8bf7\u63d2\u5165\u6587\u672c\u4ee5\u4fbf\u68c0\u67e5
 
 eo = \u4e16\u754c\u8bed
 
-errorContext = \u9519\u8bef\u5b57\u6bb5\:
+errorContext = \u9519\u8bef\u5b57\u6bb5\uff1a
 
-errorMessage = \u9519\u8bef\u4fe1\u606f\:
+errorMessage = \u9519\u8bef\u4fe1\u606f\uff1a
 
 es = \u897f\u73ed\u7259\u8bed
 
 false_friend = \u5bb9\u6613\u8bd1\u9519\u7684\u8bcd\u8bed
 
-false_friend_desc = false friend hint for\:
+false_friend_desc = \u5bb9\u6613\u8bd1\u9519\u7684\u8bcd\u8bed\u63d0\u793a\uff1a
 
 false_friend_hint = \u63d0\u793a\: "{0}" ({1}) \u7684\u610f\u601d\u662f {2} ({3}).
 
@@ -77,7 +77,7 @@ fr = \u6cd5\u8bed
 
 gl = \u897f\u73ed\u7259\u8bed
 
-guiAddButton=\u6dfb\u52a0
+guiAddButton=\u6dfb\u52a0...
 guiCancelButton = \u53d6\u6d88
 
 guiCheckComplete = LanguageTool\u7684\u68c0\u67e5\u5df2\u5b8c\u6210\u3002
@@ -88,7 +88,7 @@ guiConfigWindowTitle = LanguageTool\u9009\u9879
 guiDemoText = \u8fd9\u662f\u4e00\u4e2a\u5411\u60a8\u4eec\u5c55\u793a\u5982\u4f55\u4f7f\u7528LanguageToo\u7684\u4f8b\u5b50\u3002\u4e0d\u5305\u62ec\u62fc\u5199\u9519\u8bef\u3002
 guiLanguageManagerDialog=\u8bed\u8a00\u6a21\u5757\u7ba1\u7406
 
-guiMatchCount = \u6f5c\u5728\u7684\u9519\u8bef\:
+guiMatchCount = \u6f5c\u5728\u7684\u9519\u8bef\uff1a
 
 guiMenuAbout = &\u5173\u4e8e...
 
@@ -185,9 +185,9 @@ startChecking = \u5f00\u59cb\u7528{0}\u68c0\u67e5
 
 sv = \u745e\u5178\u8bed
 
-tl = 
+tl = \u6807\u8bb0\u8bb0\u5f55
 
-textLanguage = \u6587\u672c\u8bed\u8a00\:
+textLanguage = \u6587\u672c\u8bed\u8a00\uff1a
 
 two_commas = \u4e24\u4e2a\u8fde\u7eed\u7684\u9017\u53f7
 
@@ -197,7 +197,7 @@ uk = \u4e4c\u514b\u5170\u8bed
 
 unpaired_brackets = \u4e0d\u6210\u5bf9\u7684\u62ec\u53f7\u6216\u8005\u76f8\u4f3c\u7684\u7b26\u53f7
 
-whitespace_repetition = \u53ef\u80fd\u7684\u8f93\u5165\u9519\u8bef\: \u4f60\u91cd\u590d\u4e86\u4e00\u4e2a\u7a7a\u683c
+whitespace_repetition = \u53ef\u80fd\u7684\u8f93\u5165\u9519\u8bef\uff1a\u4f60\u91cd\u590d\u4e86\u4e00\u4e2a\u7a7a\u683c
 
 ro = \u7f57\u9a6c\u5c3c\u4e9a\u8bed
 
